# Nettverksprogrammering-prosjekt

./: .gitignore  Cargo.toml  LICENSE  README.md  project-description.md
.github/workflows/: ci.yml
crates/crdt-core/: Cargo.toml
crates/crdt-core/src/: clock.rs  counter.rs  g_set.rs  lib.rs  pn_counter.rs  traits.rs  vector_clock.rs
crates/crdt-sync/: Cargo.toml
crates/crdt-sync/src/: lib.rs
crates/todo-app/: Cargo.toml
crates/todo-app/src/: main.rs  protocol.rs  server.rs  state.rs
crates/todo-app/static/: app.js  index.html  style.css
