[workspace]
members = [
    "crates/crdt-core",
    "crates/crdt-sync",
    "crates/todo-app",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Oleander Tengesdal", "Sindre Jentoft Bøe"]
repository = ""

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async runtime + networking
tokio = { version = "1.36", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

# IDs and time
uuid = { version = "1.7", features = ["v4", "serde"] }

# Error handling and logging
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Testing
proptest = "1.4"

# Web server for demo app
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }

# TUI for demo app
ratatui = "0.26"
crossterm = "0.27"

# Internal crates
crdt-core = { path = "crates/crdt-core" }
crdt-sync = { path = "crates/crdt-sync" }

[profile.release]
lto = true
codegen-units = 1
